--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- author -->
 		<meta name="author" content="Shivam Panchal" />
 		<!-- link -->
-		<link rel="stylesheet" type="text/css" href="cssHelper.css" />
+		<link rel="stylesheet" type="text/css" href="./styles.css" />
 	</head>
 	<body>
 		<header class="Header">
