--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<header class="Header">
 			<ul class="Logo">
 				<li>CSS Helper</li>
-				<li>Shivam Panchal</li>
+				<!-- <li>Shivam Panchal</li> -->
 			</ul>
 		</header>
 		<nav class="Navbar">
@@ -34,13 +34,15 @@
 				<li><a href="#Div">Div</a></li>
 				<li><a href="#Img">Image</a></li>
 			</ul>
-			<a href="./Helper.css" download="Helper.css">Download Helper.css</a>
+			<a href="./Helper.css" download="Helper.css" class="Download"
+				>Download Helper.css</a
+			>
 			<div class="holder"></div>
 		</nav>
 		<main class="Main">
 			<article id="Lang">
 				<h1>
-					Lang attribute for HTML. Accessibility & Accessible Technologies
+					Lang attribute for HTML (Accessibility & Accessible Technologies)
 				</h1>
 				<p>
 					<strong>NOTE: </strong>Check CSS File and change html tag to view the
@@ -61,7 +63,7 @@
 				</ol>
 			</article>
 			<article id="Anchor">
-				<h1>Malicious Issues for Anchors. Security</h1>
+				<h1>Malicious Issues for Anchors (Security)</h1>
 				<ol>
 					<li>
 						<a
@@ -97,16 +99,18 @@
 					</li>
 					<li>
 						<a href="https://github.com/GodWin1100" target="_blank"
-							>Github - no rel</a
+							>Github - no rel attributes</a
 						>
 					</li>
 					<li>
-						<a href="https://github.com/GodWin1100">Github - no _blank</a>
+						<a href="https://github.com/GodWin1100"
+							>Github - no target="_blank"
+						</a>
 					</li>
 				</ol>
 			</article>
 			<article id="Div">
-				<h1>Div inside Inline Element. Semantic</h1>
+				<h1>Div inside Inline Element (Semantic Element)</h1>
 				<ol>
 					<li>
 						<a
@@ -216,7 +220,7 @@
 				</ol>
 			</article>
 			<article id="Img">
-				<h1>Check alt attribute in Img tag</h1>
+				<h1>Check alt attribute in Img tag (Semantic & Accessibility)</h1>
 				<ol>
 					<li><img src="./wolf.jpg" alt="Wolf" /></li>
 					<li><img src="./wolf.jpg" /></li>
